--- a/_head.tex
+++ b/_head.tex
@@ -6,6 +6,8 @@
 \usepackage{tabu}
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
+\usepackage{tikz}
+\usetikzlibrary{arrows,positioning,fit,shapes,calc}
 
 % ORIGINAL
 \usepackage{rotating}% for sideways figures and tables
