--- a/bibliography.bib
+++ b/bibliography.bib
@@ -8,6 +8,26 @@
 }
 
 @article{alcala2011keel,
+  title={Keel data-mining software tool: data set repository, integration of algorithms and experimental analysis framework.},
+  author={Alcal{\'a}-Fdez, Jes{\'u}s and Fern{\'a}ndez, Alberto and Luengo, Juli{\'a}n and Derrac, Joaqu{\'\i}n and Garc{\'\i}a, Salvador and S{\'a}nchez, Luciano and Herrera, Francisco},
+  journal={Journal of Multiple-Valued Logic \& Soft Computing},
+  volume={17},
+  year={2011},
+  publisher={Citeseer}
+}
+
+@article{fernandez2009hierarchical,
+  title={Hierarchical fuzzy rule based classification systems with genetic rule selection for imbalanced data-sets},
+  author={Fern{\'a}ndez, Alberto and del Jesus, Mar{\'\i}a Jos{\'e} and Herrera, Francisco},
+  journal={International Journal of Approximate Reasoning},
+  volume={50},
+  number={3},
+  pages={561--577},
+  year={2009},
+  publisher={Elsevier}
+}
+
+@article{alcala2011keel,
   title={{KEEL} data-mining software tool: data set repository, integration of algorithms and experimental analysis framework.},
   author={Alcal{\'a}-Fdez, Jes{\'u}s and Fern{\'a}ndez, Alberto and Luengo, Juli{\'a}n and Derrac, Joaqu{\'\i}n and Garc{\'\i}a, Salvador and S{\'a}nchez, Luciano and Herrera, Francisco},
   journal={Journal of Multiple-Valued Logic \& Soft Computing},
