--- a/bibliography.bib
+++ b/bibliography.bib
@@ -7,6 +7,73 @@
   organization={Springer}
 }
 
+@article{scikit-learn,
+ title={Scikit-learn: Machine Learning in {P}ython},
+ author={Pedregosa, F. and Varoquaux, G. and Gramfort, A. and Michel, V.
+         and Thirion, B. and Grisel, O. and Blondel, M. and Prettenhofer, P.
+         and Weiss, R. and Dubourg, V. and Vanderplas, J. and Passos, A. and
+         Cournapeau, D. and Brucher, M. and Perrot, M. and Duchesnay, E.},
+ journal={Journal of Machine Learning Research},
+ volume={12},
+ pages={2825--2830},
+ year={2011}
+}
+
+@InProceedings{gnb,
+author="Chan, T. F.
+and Golub, G. H.
+and LeVeque, R. J.",
+editor="Caussinus, H.
+and Ettinger, P.
+and Tomassone, R.",
+title="Updating Formulae and a Pairwise Algorithm for Computing Sample Variances",
+booktitle="COMPSTAT 1982 5th Symposium held at Toulouse 1982",
+year="1982",
+publisher="Physica-Verlag HD",
+address="Heidelberg",
+pages="30--41",
+abstract="A general formula is presented son. computing the sample valiance son a sample of size mtn given the means and valiance son two subsamples of sizes m and n. This formula is used in the construction of a pairwise algorithm son computing the valiance. Other applications are discussed as well including the use of updating formulae in a parallel computing environment. we present resume and rounding error analyze son several numerical schemes.",
+isbn="978-3-642-51461-6"
+}
+
+@article{loh2011classification,
+  title={Classification and regression trees},
+  author={Loh, Wei-Yin},
+  journal={Wiley Interdisciplinary Reviews: Data Mining and Knowledge Discovery},
+  volume={1},
+  number={1},
+  pages={14--23},
+  year={2011},
+  publisher={Wiley Online Library}
+}
+
+@book{alpaydin2009introduction,
+  title={Introduction to machine learning},
+  author={Alpaydin, Ethem},
+  year={2009},
+  publisher={MIT press}
+}
+
+@inproceedings{brodersen2010balanced,
+  title={The balanced accuracy and its posterior distribution},
+  author={Brodersen, Kay Henning and Ong, Cheng Soon and Stephan, Klaas Enno and Buhmann, Joachim M},
+  booktitle={Pattern recognition (ICPR), 2010 20th international conference on},
+  pages={3121--3124},
+  year={2010},
+  organization={IEEE}
+}
+
+@article{wilcoxon1945individual,
+  title={Individual comparisons by ranking methods},
+  author={Wilcoxon, Frank},
+  journal={Biometrics bulletin},
+  volume={1},
+  number={6},
+  pages={80--83},
+  year={1945},
+  publisher={JSTOR}
+}
+
 @article{alcala2011keel,
   title={Keel data-mining software tool: data set repository, integration of algorithms and experimental analysis framework.},
   author={Alcal{\'a}-Fdez, Jes{\'u}s and Fern{\'a}ndez, Alberto and Luengo, Juli{\'a}n and Derrac, Joaqu{\'\i}n and Garc{\'\i}a, Salvador and S{\'a}nchez, Luciano and Herrera, Francisco},
